--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@stripe/stripe-js": "^1.46.0",
     "@thirdweb-dev/react": "^3",
     "@thirdweb-dev/sdk": "^3",
+    "magic-sdk": "^21.3.1",
     "ethers": "^5.7.2",
     "micro": "^10.0.1",
     "next": "^13",
